# binconvfm

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  update_data_submodule.sh
.github/: README.md
.github/workflows/: ci.yml
TSDatasets/monash/: get_loaders.py  utils.py
binconvfm/: datamodules.py  linear.py  transforms.py
binconvfm/datamodules/: __init__.py  dummy.py  gift_eval.py  monash.py  sin.py
binconvfm/layers/: DynamicTanh.py
binconvfm/models/: __init__.py  base.py  binconv.py  binconv_old.py  linear.py  lstm.py
binconvfm/transform/: __init__.py  base.py  factory.py  pipeline.py  quantizers.py  scalers.py
binconvfm/utils/: forecast.py  metrics.py  processing.py  reshape.py
binconvfm/utils/download/: gift_eval.py  gift_eval_pretrain_file_names.py  gift_eval_util.py  gift_eval_windowed_dataset.py  quick.py  window_mixing_dataset.py
configs/dummy/: lstm.yaml
data/notebooks/data/cache/datasets--duol--airpassengers/snapshots/62967f9c784156bc16de3c8b0ca65c5630cfb592/: AP.csv
data/tests/synthetic/: test_linear_trend.py
examples/: train_binconv_tourism.py
notebooks/: binconv.ipynb  binconv_training_example.ipynb  learn_real_workd_data.ipynb  learn_real_world_data.ipynb  linear.ipynb  lstm.ipynb  performance_tuning.ipynb  performance_tuning_streaming.ipynb  train_lstm_on_gift_eval.ipynb  vast_ai_template.ipynb
scripts/: fit_config_example.sh  fit_params_example.sh  test_params_example.sh
tests/: __init__.py  test_models.py  test_processing.py  test_window_mixing_dataset.py
