[project]
name = 'binconvfm'
version = '1.0.0'
requires-python = '>=3.11'
dependencies = [
    'lightning>=2.5.2',
    'matplotlib>=3.10.3',
    'notebook>=7.4.4',
    'ipywidgets>=8.1.7',
]

[tool.setuptools]
packages = ['binconvfm']

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.17.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

