[tool.poetry]
name = "binconvfm"
version = "1.0.0"
description = "Binary Convolution Foundation Model for Time Series Forecasting"
authors = ["BinConvFM Team"]
readme = "README.md"
packages = [{include = "binconvfm"}]

[tool.poetry.dependencies]
python = "^3.11"
lightning = "^2.5.2"
pytorch_lightning = "^2.5.2"
torch = "^2.1.0"
huggingface-hub = ">=0.20.3"
ts-preprocessing = "*"
datasets = "^4.0.0"
jsonargparse = {version = "*", extras = ["signatures"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

